feat: add folders public API
